<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                                   tools:context="tun.proxy.MainActivity"
                                                   tools:showIn="@layout/activity_main">
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical">

		<EditText
			android:id="@+id/host"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:hint="@string/host_hint"
			android:inputType="text"
			android:maxLines="1"
			android:minWidth="60dp"
			android:singleLine="true"
			android:text="@string/defaultHost"
			android:autofillHints="" />

		<Button
				android:id="@+id/start"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/start"/>

		<Button
				android:id="@+id/stop"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/stop"/>

		<EditText
			android:id="@+id/search_src_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="@string/google_search"
			android:inputType="text"
			android:maxLines="1"
			android:minWidth="60dp"
			android:singleLine="true"
			android:autofillHints="" />

		<Button
			android:id="@+id/search_go_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/searchButton"/>

		<Button
			android:id="@+id/search_voice_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/image_search"/>

	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>